4.2
 * Change shebangs of Python scripts to resolve Python 3 from env command (CASSANDRA-17832)
 * Add reasons to guardrail messages and consider guardrails in the error message for needed ALLOW FILTERING (CASSANDRA-17967)
 * Add support for CQL functions on collections, tuples and UDTs (CASSANDRA-17811)
 * Add flag to exclude nodes from local DC when running nodetool rebuild (CASSANDRA-17870)
 * Adding endpoint verification option to client_encryption_options (CASSANDRA-18034)
 * Replace 'wcwidth.py' with pypi module (CASSANDRA-17287)
 * Add nodetool forcecompact to remove tombstoned or ttl'd data ignoring GC grace for given table and partition keys (CASSANDRA-17711)
 * Offer IF (NOT) EXISTS in cqlsh completion for CREATE TYPE, DROP TYPE, CREATE ROLE and DROP ROLE (CASSANDRA-16640)
 * Nodetool bootstrap resume will now return an error if the operation fails (CASSANDRA-16491)
 * Disable resumable bootstrap by default (CASSANDRA-17679)
 * Include Git SHA in --verbose flag for nodetool version (CASSANDRA-17753)
 * Update Byteman to 4.0.20 and Jacoco to 0.8.8 (CASSANDRA-16413)
 * Add memtable option among possible tab completions for a table (CASSANDRA-17982)
 * Adds a trie-based memtable implementation (CASSANDRA-17240)
 * Further improves precision of memtable heap tracking (CASSANDRA-17240)
 * Fix formatting of metrics documentation (CASSANDRA-17961)
 * Keep sstable level when streaming for decommission and move (CASSANDRA-17969)
 * Add Unavailables metric for CASWrite in the docs (CASSANDRA-16357)
 * Make Cassandra logs able to be viewed in the virtual table system_views.system_logs (CASSANDRA-17946)
 * IllegalArgumentException in Gossiper#order due to concurrent mutations to elements being applied (CASSANDRA-17908)
 * Include estimated active compaction remaining write size when starting a new compaction (CASSANDRA-17931)
 * Mixed mode support for internode authentication during TLS upgrades (CASSANDRA-17923)