@@ -639,6 +639,7 @@ class TestCqlshCompletion(CqlshCompletionCase):
                                      'bloom_filter_fp_chance', 'compaction',
                                      'compression',
                                      'default_time_to_live', 'gc_grace_seconds',
+                                     'incremental_backups',
                                      'max_index_interval',
                                      'memtable',
                                      'memtable_flush_period_in_ms',
@@ -650,6 +651,7 @@ class TestCqlshCompletion(CqlshCompletionCase):
                                      'bloom_filter_fp_chance', 'compaction',
                                      'compression',
                                      'default_time_to_live', 'gc_grace_seconds',
+                                     'incremental_backups',
                                      'max_index_interval',
                                      'memtable',
                                      'memtable_flush_period_in_ms',
@@ -699,6 +701,7 @@ class TestCqlshCompletion(CqlshCompletionCase):
                             choices=['allow_auto_snapshot', 'bloom_filter_fp_chance', 'compaction',
                                      'compression',
                                      'default_time_to_live', 'gc_grace_seconds',
+                                     'incremental_backups',
                                      'max_index_interval',
                                      'memtable',
                                      'memtable_flush_period_in_ms',
