@@ -52,6 +52,7 @@ public final class TableParams
         DEFAULT_TIME_TO_LIVE,
         EXTENSIONS,
         GC_GRACE_SECONDS,
+        INCREMENTAL_BACKUPS,
         MAX_INDEX_INTERVAL,
         MEMTABLE_FLUSH_PERIOD_IN_MS,
         MIN_INDEX_INTERVAL,
@@ -73,6 +74,7 @@ public final class TableParams
     public final double bloomFilterFpChance;
     public final double crcCheckChance;
     public final int gcGraceSeconds;
+    public final boolean incrementalBackups;
     public final int defaultTimeToLive;
     public final int memtableFlushPeriodInMs;
     public final int minIndexInterval;
@@ -96,6 +98,7 @@ public final class TableParams
                             : builder.bloomFilterFpChance;
         crcCheckChance = builder.crcCheckChance;
         gcGraceSeconds = builder.gcGraceSeconds;
+        incrementalBackups = builder.incrementalBackups;
         defaultTimeToLive = builder.defaultTimeToLive;
         memtableFlushPeriodInMs = builder.memtableFlushPeriodInMs;
         minIndexInterval = builder.minIndexInterval;
@@ -128,6 +131,7 @@ public final class TableParams
                             .crcCheckChance(params.crcCheckChance)
                             .defaultTimeToLive(params.defaultTimeToLive)
                             .gcGraceSeconds(params.gcGraceSeconds)
+                            .incrementalBackups(params.incrementalBackups)
                             .maxIndexInterval(params.maxIndexInterval)
                             .memtableFlushPeriodInMs(params.memtableFlushPeriodInMs)
                             .minIndexInterval(params.minIndexInterval)
@@ -213,7 +217,8 @@ public final class TableParams
             && allowAutoSnapshot == p.allowAutoSnapshot
             && bloomFilterFpChance == p.bloomFilterFpChance
             && crcCheckChance == p.crcCheckChance
-            && gcGraceSeconds == p.gcGraceSeconds
+            && gcGraceSeconds == p.gcGraceSeconds 
+            && incrementalBackups == p.incrementalBackups
             && defaultTimeToLive == p.defaultTimeToLive
             && memtableFlushPeriodInMs == p.memtableFlushPeriodInMs
             && minIndexInterval == p.minIndexInterval
@@ -237,6 +242,7 @@ public final class TableParams
                                 bloomFilterFpChance,
                                 crcCheckChance,
                                 gcGraceSeconds,
+                                incrementalBackups,
                                 defaultTimeToLive,
                                 memtableFlushPeriodInMs,
                                 minIndexInterval,
@@ -262,6 +268,7 @@ public final class TableParams
                           .add(CRC_CHECK_CHANCE.toString(), crcCheckChance)
                           .add(GC_GRACE_SECONDS.toString(), gcGraceSeconds)
                           .add(DEFAULT_TIME_TO_LIVE.toString(), defaultTimeToLive)
+                          .add(INCREMENTAL_BACKUPS.toString(), incrementalBackups)
                           .add(MEMTABLE_FLUSH_PERIOD_IN_MS.toString(), memtableFlushPeriodInMs)
                           .add(MIN_INDEX_INTERVAL.toString(), minIndexInterval)
                           .add(MAX_INDEX_INTERVAL.toString(), maxIndexInterval)
@@ -314,6 +321,8 @@ public final class TableParams
                .newLine()
                .append("AND gc_grace_seconds = ").append(gcGraceSeconds)
                .newLine()
+               .append("AND incremental_backups = ").append(incrementalBackups)
+               .newLine()
                .append("AND max_index_interval = ").append(maxIndexInterval)
                .newLine()
                .append("AND memtable_flush_period_in_ms = ").append(memtableFlushPeriodInMs)
@@ -332,6 +341,7 @@ public final class TableParams
         private double bloomFilterFpChance = -1;
         private double crcCheckChance = 1.0;
         private int gcGraceSeconds = 864000; // 10 days
+        private boolean incrementalBackups = true;
         private int defaultTimeToLive = 0;
         private int memtableFlushPeriodInMs = 0;
         private int minIndexInterval = 128;
@@ -382,6 +392,12 @@ public final class TableParams
         public Builder gcGraceSeconds(int val)
         {
             gcGraceSeconds = val;
+            return this;
+        }
+
+        public Builder incrementalBackups(boolean val)
+        {
+            incrementalBackups = val;
             return this;
         }
 
